templates/LoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  labels:
    app: ingress-nginx
  annotations:
    service.beta.kubernetes.io/aws-loadbalancer-proxy-protocol: '*'
    service.beta.kubernetes.io/aws-loadbalancer-connection-idle-timeout: '3600'
    external-dns.alpha.kubernetes.io/hostname: ingress.rajputshashank.tk
spec:
  #externalTrafficPolicy: "Local"
  type: LoadBalancer
  ports:
  - port: 80
    name: http
#  - port: 443
#   name: https
  selector:
    app: ingress-nginx

---
#kind: ConfigMap
#apiVersion: v1
#metadata:
#  name: nginx-configuration
#  labels: 
#    app: ingress-nginx
#data:
#  use-proxy-prtocol: "true"
